# xmidt-agent-c

./: .clang-format  .clang-format-ignore  .gitignore  .lgtm.yml  .sonar-project.properties  CHANGELOG.md  CMakeLists.txt  NOTICE  README.md  meson.build  meson_options.txt
.github/workflows/: code-format.yml  codeql-analysis.yml  coverity.yml  push.yml
.reuse/: dep5
cmake/: Coverage.cmake  FindCjwt.cmake  FindCurl.cmake  FindCurlws.cmake  FindLibUuid.cmake  FindTrowerBase64.cmake  FindWrpc.cmake  FindcJSON.cmake  LocalInstallPaths.cmake
examples/: CMakeLists.txt
examples/auth-fetch-cli/: CMakeLists.txt  cli.c
examples/dns-token-cli/: CMakeLists.txt  cli.c
src/: CMakeLists.txt  auth_token.c  auth_token.h  codes.c  codes.h  dns_token.c  dns_token.h  dns_txt.c  dns_txt.h  log.c  log.h  main.c  meson.build  string.h  time.c  time.h  utils.c  utils.h  xmidt-agent-ver.h.in
src/auth_token/: auth_token.c  auth_token.h
src/cli/: config.c  config.h  main.c  signals.c  signals.h
src/config/: cfg_file.c  cli.c  config.c  config.h  internal.h  print.c  read_files.c
src/dns_txt/: dns_txt.c  dns_txt.h
src/error/: codes.c  codes.h
src/libc/: CMakeLists.txt  xa_ctype.c  xa_ctype.h  xa_file.c  xa_file.h  xa_time.c  xa_utils.c  xa_utils.h  xa_xxd.c  xa_xxd.h
src/logging/: log.c  log.h
subprojects/: cjwt.wrap  curlws.wrap  cutils.wrap  otelc.wrap  wrp-c.wrap
tests/: CMakeLists.txt  curl_mocks.c  test_auth_token.c  test_cli.c  test_codes.c  test_config.c  test_dns_token.c  test_dns_txt.c  test_file.c  test_log.c  test_time.c  test_utils.c  test_xxd.c
tests/cfg/invalid_01/: config.json
tests/cfg/invalid_05/: config.json
tests/cfg/invalid_08/: config.json
tests/cfg/invalid_10/: 00_lower_priority.json
tests/cfg/invalid_11/: 00_lower_priority.json
tests/cfg/invalid_12/: 00_lower_priority.json
tests/cfg/invalid_13/: 00_lower_priority.json  01_higher_priority.json
tests/cfg/invalid_2/: config.json
tests/cfg/invalid_3/: config.json
tests/cfg/invalid_4/: config.json
tests/cfg/invalid_6/: config.json
tests/cfg/invalid_7/: config.json
tests/cfg/invalid_9/: config.json
tests/cfg/test_02/: behavior.dns_txt.json  behavior.issuer.json  identity.json
tests/cfg/test_03/: 01_higher_priority.json
tests/cfg/test_04/: 00_lower_priority.json
tests/cfg/test_2/: behavior.dns_txt.jwt.algs.json  behavior.dns_txt.jwt.json  behavior.interfaces.json  behavior.json  firmware.json  hardware.json
tests/cfg/test_3/: 00_lower_priority.json
